--- a/htdocs/e2fsprogs-release.html
+++ b/htdocs/e2fsprogs-release.html
@@ -30,6 +30,7 @@
 
 <H2>Release notes for the e2fsprogs package</H2>
 <UL>
+<LI><A HREF="#1.45.4">E2fsprogs 1.45.4 (September 23, 2019)</A>
 <LI><A HREF="#1.45.3">E2fsprogs 1.45.3 (July 14, 2019)</A>
 <LI><A HREF="#1.45.2">E2fsprogs 1.45.2 (May 27, 2019)</A>
 <LI><A HREF="#1.45.1">E2fsprogs 1.45.1 (May 12, 2019)</A>
@@ -132,6 +133,50 @@
 <LI><A HREF="#1.03">E2fsprogs 1.03 (March 27, 1996)</A>
 <LI><A HREF="#1.02">E2fsprogs 1.02 (January 16, 1996)</A>
 </UL>
+
+<H2><A NAME="1.45.4">E2fsprogs 1.45.4 (September 23, 2019)</A></H2>
+
+<H3>Fixes</H3>
+
+<P>A maliciously corrupted file systems can trigger buffer overruns in the
+quota code used by e2fsck.  (Addresses CVE-2019-5094)</P>
+
+<P>E2fsck now checks to make sure the casefold flag is only set on
+directories, and only when the casefold feature is enabled.</P>
+
+<P>E2fsck will not disable the low dtime checks when using a backup
+superblock where the last mount time is zero.  This fixes a failure in
+xfstests ext4/007.</P>
+
+<P>Fix e2fsck so that when it needs to recreate the root directory, the
+quota counts are correctly updated.</P>
+
+<P>Fix e2scrub_all cron script so it checks to make sure e2scrub_all
+exists, since the crontab and cron script might stick around after the
+e2fsprogs package is removed.  (Addresses Debian Bug: #932622)</P>
+
+<P>Fix e2scrub_all so that it works when the free space is exactly the
+snapshot size.  (Addresses Debian Bug: #935009)</P>
+
+<P>Avoid spurious lvm warnings when e2scrub_all is run out of cron on
+non-systemd systems (Addresses Debian Bug: #940240)</P>
+
+<P>Update the man pages to document the new fsverity feature, and improve
+the documentation for the casefold and encrypt features.</P>
+
+<H3>Performance, Internal Implementation, Development Support etc.</H3>
+
+<P>Fixed various debian packaging issues.  (Addresses Debian Bug: #933247,
+#932874, #932876, #932855, #932859, #932861, #932881, #932888)</P>
+
+<P>Fix false positive test failure in f_pre_1970_date_encoding on 32-bit
+systems with a 64-bit time_t.  (Addresses Debian Bug: #932906)</P>
+
+<P>Fixed various compiler warnings.  (Addresses Google Bug #118836063)</P>
+
+<P>Update the Czech, Dutch, French, German, Malay, Polish, Portuguese,
+Spanish, Swedish, Ukrainian, and Vietnamese translations from the
+Translation Project.</P>
 
 <H2><A NAME="1.45.3">E2fsprogs 1.45.3 (July 14, 2019)</A></H2>
 
